dbeaver/pro#5520 Fix truncation logic